--- a/kko_etc_style.css
+++ b/kko_etc_style.css
@@ -13,12 +13,12 @@ body#common-k {
     color: navy; 
     font-size:100%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
 }
+
 body#common-k_en {
     background-image: url(../../../image/back/back_kko.gif); 
     background-color:#FFFFFF;
     color: navy; 
-    font-size:105%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
-    line-height:150%;
+    font-size:115%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
 }
 body#common-k_g { /* green version */
     background-image: url(../../../image/back/back_kko_g.gif); 
@@ -46,7 +46,13 @@ body#common-p {
 }
 
 
-div#main420  { width: 420px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
+div#main420  { 
+    width: 420px;  
+    margin-left: auto;  margin-right: auto; 
+    padding-left: 10px; padding-right: 10px; 
+    text-align: center; 
+    border: 0px solid #FF9900;
+}
 .c_main920  { width: 920px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
 .c_main420  { width: 420px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
 .pic-left420   {width:  420px; text-align:left;                     margin-right:auto; } /* MM_Ayutthaya */
@@ -96,7 +102,7 @@ div.navbox{
         ** sandbox css ** 
         ----------------- 
 */
-ul.menu {font-family:12px serif;}
+ul.menu {font-family: serif; font-size: 95%}
 ul.menu {list-style:none; margin:0; padding:0}
 ul.menu * {margin:0; padding:0}
 ul.menu a {display:block; color:#666; text-decoration:none}
@@ -111,6 +117,22 @@ ul.menu .menulink {border:0px solid #666; padding:4px 7px 2px; font-weight:mediu
 ul.menu .menulink:hover, ul.menu .menuhover {color: #f00; background:#d0d0d0}
 ul.menu .sub {text-align: left; background:#d1d1d1; width:98px}
 ul.menu .topline {border-top:1px solid #666}
+
+ul.menu_en {font-family: serif; font-size: 80%}
+ul.menu_en {list-style:none; margin:0; padding:0}
+ul.menu_en * {margin:0; padding:0}
+ul.menu_en a {display:block; color:#666; text-decoration:none}
+ul.menu_en li {position:relative; float:left; margin-right:2px}
+/*ul.menu_en li.about {position:relative; float:right; margin-right:2px}*/
+ul.menu_en ul {position:absolute; top:26px; left:0; background:#d1d1d1; display:none; opacity:0; list-style:none}
+ul.menu_en ul li {position:relative; border:1px solid #fff; border-top:none; width:108px; margin:0 0 0 -1px}
+ul.menu_en ul li a {display:block; padding:3px 7px 5px; background-color:#d1d1d1}
+ul.menu_en ul li a:hover {color: #f00; background-color:#c5c5c5}
+ul.menu_en ul ul {left:108px; top:-1px}
+ul.menu_en .menulink {border:0px solid #666; padding:4px 7px 2px; font-weight:medium; background:none; width:98px}
+ul.menu_en .menulink:hover, ul.menu .menuhover {color: #f00; background:#d0d0d0}
+ul.menu_en .sub {text-align: left; background:#d1d1d1; width:98px}
+ul.menu_en .topline {border-top:1px solid #666}
 
 
 /*    ============== 
