--- a/libs/etc/css/kko_etc_style.css
+++ b/libs/etc/css/kko_etc_style.css
@@ -1,5 +1,19 @@
+
+/* for debug */
+body {
+  outline: 2px dashed red;
+  overflow-x: auto;
+}
+
 /* 画面の余白を取り払う */
+/*
 * {margin:0; padding:0; outline:0}
+*/
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
 
 /*    ============ 
         *** body *** 
@@ -12,13 +26,26 @@ body#common-k {
     color: navy; 
     font-size:95%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
 }
-body#common-k_en {
+
+body#common-k_920 {
     background-image: url(../../../image/back/back_kko.gif); 
     background-color:#FFFFFF;
     color: navy; 
-    font-size:105%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
-    line-height:150%;
+    font-size:100%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
 }
+body#common-k_420 {
+    background-image: url(../../../image/back/back_kko.gif); 
+    background-color:#FFFFFF;
+    color: navy; 
+    font-size:115%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
+}
+body#common-k_400 {
+    background-image: url(../../../image/back/back_kko.gif); 
+    background-color:#FFFFFF;
+    color: navy; 
+    font-size:115%; font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI","Noto Sans Japanese","ヒラギノ角ゴ ProN W3", Meiryo, sans-serif;
+}
+
 body#common-k_g { /* green version */
     background-image: url(../../../image/back/back_kko_g.gif); 
     background-color:#FFFFFF;
@@ -45,14 +72,56 @@ body#common-p {
 }
 
 
+div#main420  { 
+    max-width: 420px;  
+    margin: auto;
+    padding-left: 10px; padding-right: 10px; 
+    text-align: center; 
+    border: 0px solid #FF9900;
+    box-sizing: border-box;
+}
+div#main400  { 
+    max-width: 400px;  
+    margin: auto;
+    padding-left: 10px; padding-right: 10px; 
+    text-align: center; 
+    border: 0px solid #FF9900;
+    box-sizing: border-box;
+}
+.c_main920  { width: 920px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
+.c_main420  { max-width: 100%; text-align: center; border: 0px solid #FF9900;}
+.c_main400  { max-width: 100%; text-align: center; border: 0px solid #FF9900;}
+.pic-left420   {max-width: 100%; text-align:left;                     margin-right:auto; } /* MM_Ayutthaya */
+.pic-left400   {max-width: 100%; text-align:left;                     margin-right:auto; } /* MM_Ayutthaya */
+
 /*    ============== 
-        *** header *** 
-        ============== 
+      *** header *** 
+      ============== 
 */
+.header_label920   { 
+    width: 920px;
+    margin-left: auto;
+    margin-right: auto; 
+    text-align: center; 
+    background-color: #f0f0f0; 
+    border: 0px solid #FF9900;
+}
+.header_label420   { 
+    max-width: 100%; 
+    text-align: center; 
+    background-color: #f0f0f0; 
+    border: 0px solid #FF9900;
+}
+.header_label400   { 
+    max-width: 100%; 
+    text-align: center; 
+    background-color: #f0f0f0; 
+    border: 0px solid #FF9900;
+}
 
 /*    ---------------- 
-        ** navigation ** 
-        ---------------- 
+      ** navigation ** 
+      ---------------- 
 */
 /*    navbox
 */
@@ -67,28 +136,119 @@ div.navbox{
     float: left; 
     text-align: left;
     margin:  0   0    0 0; 
-    padding: 5px 30px 0 50px; 
+    padding: 5px 0px 5px 0px; 
 }
 
 /*    ----------------- 
         ** sandbox css ** 
         ----------------- 
 */
-ul.menu {font-family:12px serif;}
+ul.menu {font-family: serif; font-size: 95%}
 ul.menu {list-style:none; margin:0; padding:0}
 ul.menu * {margin:0; padding:0}
-ul.menu a {display:block; color:#aaa; text-decoration:none}
+ul.menu a {display:block; color:#666; text-decoration:none}
 ul.menu li {position:relative; float:left; margin-right:2px}
-ul.menu li.about {position:relative; float:right; margin-right:2px}
+/*ul.menu li.about {position:relative; float:right; margin-right:2px}*/
 ul.menu ul {position:absolute; top:26px; left:0; background:#d1d1d1; display:none; opacity:0; list-style:none}
 ul.menu ul li {position:relative; border:1px solid #fff; border-top:none; width:108px; margin:0 0 0 -1px}
 ul.menu ul li a {display:block; padding:3px 7px 5px; background-color:#d1d1d1}
 ul.menu ul li a:hover {color: #f00; background-color:#c5c5c5}
 ul.menu ul ul {left:108px; top:-1px}
-ul.menu .menulink {border:0px solid #aaa; padding:4px 7px 2px; font-weight:medium; background:none; width:98px}
+ul.menu .menulink {border:0px solid #666; padding:4px 7px 2px; font-weight:medium; background:none; width:98px}
 ul.menu .menulink:hover, ul.menu .menuhover {color: #f00; background:#d0d0d0}
 ul.menu .sub {text-align: left; background:#d1d1d1; width:98px}
-ul.menu .topline {border-top:1px solid #aaa}
+ul.menu .topline {border-top:1px solid #666}
+/*
+ul.menu_en {font-family: serif; font-size: 95%}
+ul.menu_en {list-style:none; margin:0; padding:0}
+ul.menu_en * {margin:0; padding:0}
+ul.menu_en a {display:block; color:#666; text-decoration:none}
+ul.menu_en li {position:relative; float:left; margin-right:2px}
+*/
+/*ul.menu_en li.about {position:relative; float:right; margin-right:2px}*/
+/*
+ul.menu_en ul {position:absolute; top:26px; left:0; background:#d1d1d1; display:none; opacity:0; list-style:none}
+ul.menu_en ul li {position:relative; border:1px solid #fff; border-top:none; width:108px; margin:0 0 0 -1px}
+ul.menu_en ul li a {display:block; padding:3px 7px 5px; background-color:#d1d1d1}
+ul.menu_en ul li a:hover {color: #f00; background-color:#c5c5c5}
+ul.menu_en ul ul {left:108px; top:-1px}
+ul.menu_en .menulink {border:0px solid #666; padding:4px 7px 2px; font-weight:medium; background:none; width:98px}
+ul.menu_en .menulink:hover, ul.menu .menuhover {color: #f00; background:#d0d0d0}
+ul.menu_en .sub {text-align: left; background:#d1d1d1; width:98px}
+ul.menu_en .topline {border-top:1px solid #666}
+*/
+
+/*    ============== 
+        *** footer *** 
+        ============== 
+*/
+.footer_label920 {
+    width: 920px;
+    font-size: small; 
+    font-weight: normal; 
+    color: gray; 
+    background-color: #000;
+    margin: 0 auto; 
+    text-align: center;
+    padding-top: 5px;
+}
+.footer_label420 {
+    max-width: 100%; 
+    font-size: small; 
+    font-weight: normal; 
+    color: gray; 
+    background-color: #000;
+    text-align: center;
+    padding-top: 5px;
+}
+.footer_label400 {
+    max-width: 100%; 
+    font-size: small; 
+    font-weight: normal; 
+    color: gray; 
+    background-color: #000;
+    text-align: center;
+    padding-top: 5px;
+}
+
+/* horizontal partition 
+*/
+hr#footer {
+    width: 70%; height: 2px; 
+    border:none; 
+    background-color: #aaa; 
+    margin: 0px auto; 
+    text-align:center;
+}
+
+hr#footer2 {
+    height: 2px; 
+    border:none; 
+    background-color: #aaa; 
+    margin: 0px auto; 
+    text-align:center;
+}
+/* select button 
+*/
+p#footer {
+    display: inline-block; 
+    * display: inline; 
+    * zoom: 1; 
+    padding: 10px 15px 15px 15px; 
+    margin:  0;
+}
+/* footer label 
+*/
+div#footer_label {
+    font-size: small; 
+    font-weight: normal; 
+    color: gray; 
+    background-color: #000;
+    margin: 0 auto; 
+    text-align: center;
+    padding-top: 5px;
+}
+
 
 
 /*    ================= 
@@ -101,7 +261,7 @@ ul.menu .topline {border-top:1px solid #aaa}
         -------------------- 
 */
 div#main     {                margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
-div#main480  { width: 480px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
+div#main480  { width: 480px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #009900;}
 div#main720  { width: 720px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #009900;}
 div#main760  { width: 760px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
 div#main800  { width: 800px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
@@ -112,8 +272,6 @@ div#main990  { width: 990px;  margin-left: auto;  margin-right: auto; text-align
 div#main1024 { width: 1024px; margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
 div#main1280 { width: 1280px; margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
 
-.c_main480  { width: 480px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
-.c_main920  { width: 920px;  margin-left: auto;  margin-right: auto; text-align: center; border: 0px solid #FF9900;}
 
 /* horizontal partition
 */
@@ -121,6 +279,43 @@ hr.main {   width: 70%; height: 2px; border:none; background-color: #aaa; margin
 hr.main720 {width: 70%; height: 2px; border:none; background-color: #aaa; margin: 0px auto  0px auto;}
 hr.main800 {width: 70%; height: 2px; border:none; background-color: #aaa; margin: 0px auto  0px auto;}
 hr.main990 {width: 70%; height: 2px; border:none; background-color: #aaa; margin: 0px auto 20px auto;}
+
+/*    picture と その下にテキスト(自由な位置に配置したい)を含むボックスの配置 
+*/
+.pic-center320 {width:  320px; text-align:center; margin-left:auto; margin-right:auto; } /* Takeoff !? ... wow */
+.pic-left480   {width:  480px; text-align:left;                     margin-right:auto; } /* MM_Ayutthaya */
+.pic-center480 {width:  480px; text-align:center; margin-left:auto; margin-right:auto; } 
+.pic-right480  {width:  480px; text-align:right;  margin-left:auto;                    } /* 4S_TAKEOKA */
+.pic-left640   {width:  640px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center640 {width:  640px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
+.pic-right640  {width:  640px; text-align:right;  margin-left:auto;                    } /* 多くのページで使用 */
+.pic-left720   {width:  720px; text-align:left;                     margin-right:auto; } /* 4S Bakersfield, mokuren */
+.pic-center720 {width:  720px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
+.pic-right720  {width:  720px; text-align:right;  margin-left:auto;                    } /* 4S mokuren, SC Tuamotu A Rangiroa */
+.pic-left760   {width:  760px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center760 {width:  760px; text-align:center; margin-left:auto; margin-right:auto; } 
+.pic-right760  {width:  760px; text-align:right;  margin-left:auto;                    } 
+.pic-left800   {width:  800px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center800 {width:  800px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
+.pic-right800  {width:  800px; text-align:right;  margin-left:auto;                    } /* 多くのページで使用 */
+.pic-left840   {width:  840px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center840 {width:  840px; text-align:center; margin-left:auto; margin-right:auto; } /* SC Tuamotu Top */
+.pic-right840  {width:  840px; text-align:right;  margin-left:auto;                    } 
+.pic-left880   {width:  880px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center880 {width:  880px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
+.pic-right880  {width:  880px; text-align:right;  margin-left:auto;                    } /* SC Tuamotu E Amanu */
+.pic-left920   {width:  920px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center920 {width:  920px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S Urashima, SC Tuamotu A Arutua */
+.pic-right920  {width:  920px; text-align:right;  margin-left:auto;                    } 
+.pic-left960   {width:  960px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center960 {width:  960px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S Benishijimi */
+.pic-right960  {width:  960px; text-align:right;  margin-left:auto;                    } 
+.pic-left990   {width:  990px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
+.pic-center990 {width:  990px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S mokuren */
+.pic-right990  {width:  990px; text-align:right;  margin-left:auto;                    } 
+.pic-left1024  {width: 1024px; text-align:left;                     margin-right:auto; } 
+.pic-center1024{width: 1024px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S Benishijimi */
+.pic-right1024 {width: 1024px; text-align:right;  margin-left:auto;                    } 
 
 
 /*    ----------- 
@@ -385,61 +580,6 @@ div#attention p{
 }
 
 
-/*    ============== 
-        *** footer *** 
-        ============== 
-*/
-
-/* horizontal partition 
-*/
-hr#footer {
-    width: 70%; height: 2px; 
-    border:none; 
-    background-color: #aaa; 
-    margin: 0px auto; 
-    text-align:center;
-}
-
-hr#footer2 {
-    height: 2px; 
-    border:none; 
-    background-color: #aaa; 
-    margin: 0px auto; 
-    text-align:center;
-}
-/* select button 
-*/
-p#footer {
-    display: inline-block; 
-    * display: inline; 
-    * zoom: 1; 
-    padding: 10px 15px 15px 15px; 
-    margin:  0;
-}
-/* footer label 
-*/
-.footer_label920 {
-    width: 920px;
-    font-size: small; 
-    font-weight: normal; 
-    color: gray; 
-    background-color: #000;
-    margin: 0 auto; 
-    text-align: center;
-    padding-top: 5px;
-}
-.footer_label480 {
-    width: 480px;
-    font-size: small; 
-    font-weight: normal; 
-    color: gray; 
-    background-color: #000;
-    margin: 0 auto; 
-    text-align: center;
-    padding-top: 5px;
-}
-
-
 /*    ==================== 
         *** table design *** 
         ==================== 
@@ -577,43 +717,6 @@ p#footer {
 /*    上下中央揃え
 */
 .vat {vertical-align: top;}        /* 未使用 */
-
-/*    picture と その下にテキスト(自由な位置に配置したい)を含むボックスの配置 
-*/
-.pic-center320 {width:  320px; text-align:center; margin-left:auto; margin-right:auto; } /* Takeoff !? ... wow */
-.pic-left480   {width:  480px; text-align:left;                     margin-right:auto; } /* MM_Ayutthaya */
-.pic-center480 {width:  480px; text-align:center; margin-left:auto; margin-right:auto; } 
-.pic-right480  {width:  480px; text-align:right;  margin-left:auto;                    } /* 4S_TAKEOKA */
-.pic-left640   {width:  640px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center640 {width:  640px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
-.pic-right640  {width:  640px; text-align:right;  margin-left:auto;                    } /* 多くのページで使用 */
-.pic-left720   {width:  720px; text-align:left;                     margin-right:auto; } /* 4S Bakersfield, mokuren */
-.pic-center720 {width:  720px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
-.pic-right720  {width:  720px; text-align:right;  margin-left:auto;                    } /* 4S mokuren, SC Tuamotu A Rangiroa */
-.pic-left760   {width:  760px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center760 {width:  760px; text-align:center; margin-left:auto; margin-right:auto; } 
-.pic-right760  {width:  760px; text-align:right;  margin-left:auto;                    } 
-.pic-left800   {width:  800px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center800 {width:  800px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
-.pic-right800  {width:  800px; text-align:right;  margin-left:auto;                    } /* 多くのページで使用 */
-.pic-left840   {width:  840px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center840 {width:  840px; text-align:center; margin-left:auto; margin-right:auto; } /* SC Tuamotu Top */
-.pic-right840  {width:  840px; text-align:right;  margin-left:auto;                    } 
-.pic-left880   {width:  880px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center880 {width:  880px; text-align:center; margin-left:auto; margin-right:auto; } /* 多くのページで使用 */
-.pic-right880  {width:  880px; text-align:right;  margin-left:auto;                    } /* SC Tuamotu E Amanu */
-.pic-left920   {width:  920px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center920 {width:  920px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S Urashima, SC Tuamotu A Arutua */
-.pic-right920  {width:  920px; text-align:right;  margin-left:auto;                    } 
-.pic-left960   {width:  960px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center960 {width:  960px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S Benishijimi */
-.pic-right960  {width:  960px; text-align:right;  margin-left:auto;                    } 
-.pic-left990   {width:  990px; text-align:left;                     margin-right:auto; } /* 多くのページで使用 */
-.pic-center990 {width:  990px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S mokuren */
-.pic-right990  {width:  990px; text-align:right;  margin-left:auto;                    } 
-.pic-left1024  {width: 1024px; text-align:left;                     margin-right:auto; } 
-.pic-center1024{width: 1024px; text-align:center; margin-left:auto; margin-right:auto; } /* 4S Benishijimi */
-.pic-right1024 {width: 1024px; text-align:right;  margin-left:auto;                    } 
 
 /*    Tuamotu Group Top ImageMapStar は左寄せになるための配慮
 */
@@ -1090,6 +1193,7 @@ input[type="checkbox"]:checked:before {
 /* --- 画像ポップアップ用のスタイル 20250312 --- */
 /* 画像コンテナ */
 .image-container {
+    max-width: 100%;
     display: inline-block;
 }
 /* ポップアップ画像 */
